Overhaul config and dataset contexts
* Update kmeans step visualisation to have HUD separate in code

* Update config to be changeable

* Add dataset context

* Add datasets to config

* Add sample story

- Update conditions
- Update some theming
